packages/main/src/themes/ColorPicker.css
/* ... */
.ui5-color-picker-circle {
    position: absolute;
    box-sizing: border-box;
    width: 0.8125rem;
    height: 0.8125rem;
    border: var(--_ui5_color_picker_circle_outer_border);
    border-radius: 0.6875rem;
    pointer-events: none;
}

.ui5-color-picker-circle:after {
    content: "";
    position: absolute;
    width: var(--_ui5_color_picker_circle_inner_circle_size);
    height: var(--_ui5_color_picker_circle_inner_circle_size);;
    border: var(--_ui5_color_picker_circle_inner_border);
    border-radius: 0.9375rem;
    pointer-events: none;
}

.ui5-color-picker-sliders-wrapper {
    width: 100%;
    padding-bottom: 0.25rem;
}

[ui5-slider] {
    --_ui5_slider_active_progress_border: none;
    --_ui5_slider_progress_box_sizing: content-box;
    height: var(--_ui5_color_picker_sliders_height);
}

[ui5-slider]::part(handle) {
    width: var(--_ui5_color_picker_slider_handle_width);
    height: var(--_ui5_color_picker_slider_handle_height);
    background: transparent;
    box-sizing: border-box;
    margin-inline-start: -.25rem;

}

[ui5-slider]::part(handle-container) {
    margin-top: var(--_ui5_color_picker_slider_handle_container_margin_top);
    margin-inline-start: -0.125rem;
    z-index: 2;
}

[ui5-slider]::part(root-container) {
	padding: var(--_ui5_color_picker_slider_spacing) 0;
}

[ui5-slider]::part(scale) {
    height: var(--_ui5_color_picker_slider_progress_container_height);
    margin-top: var(--_ui5_color_picker_slider_container_margin_top);
    border-radius: 0;
    border: 0.0625rem solid var(--sapField_BorderColor);
    box-sizing: content-box;
}

[ui5-slider]::part(scale-inner) {
    background: transparent;
    width: calc(100% - .5625rem);
}

[ui5-slider]::part(scale-inner)::before,
[ui5-slider]::part(scale-inner)::after {
    display: none;
}

[ui5-slider]::part(progress) {
    background: transparent;
}

[ui5-slider].ui5-color-picker-hue-slider::part(scale) {
    background-size: 100%;
    background-image: -webkit-linear-gradient(left, #f00, #ff0, #0f0, #0ff, #00f, #f0f, #f00);
    background-image: -moz-linear-gradient(left, #f00, #ff0, #0f0, #0ff, #00f, #f0f, #f00);
    background-image: linear-gradient(left, #f00, #ff0, #0f0, #0ff, #00f, #f0f, #f00);
    background-color: none;
}
/* ... */

